Fixing feedchooser to work with new data-less feeds. Also fixing hiding/showing when hide-unread-feeds is on. Also widened feedchooser in case of scrollbar.

--- a/media/css/reader.css
+++ b/media/css/reader.css
@@ -673,24 +673,24 @@ body.NB-theme-serif #story_pane .NB-feed-story-content {
   text-shadow: none;
 }
 
-.NB-feedlist-hide-read-feeds #feed_list .feed {
+.NB-feedlist-hide-read-feeds .NB-feedlist .feed {
   display: none;
 }
-.NB-feedlist-hide-read-feeds #feed_list.unread_view_positive .unread_positive {
+.NB-feedlist-hide-read-feeds .NB-feedlist.unread_view_positive .unread_positive {
   display: block;
 }
-.NB-feedlist-hide-read-feeds #feed_list.unread_view_neutral .unread_positive,
-.NB-feedlist-hide-read-feeds #feed_list.unread_view_neutral .unread_neutral {
-  display: block;
-}
-
-.NB-feedlist-hide-read-feeds #feed_list.unread_view_negative .unread_positive,
-.NB-feedlist-hide-read-feeds #feed_list.unread_view_negative .unread_neutral,
-.NB-feedlist-hide-read-feeds #feed_list.unread_view_negative .unread_negative {
+.NB-feedlist-hide-read-feeds .NB-feedlist.unread_view_neutral .unread_positive,
+.NB-feedlist-hide-read-feeds .NB-feedlist.unread_view_neutral .unread_neutral {
   display: block;
 }
 
-.NB-feedlist-hide-read-feeds #feed_list .feed.NB-empty {
+.NB-feedlist-hide-read-feeds .NB-feedlist.unread_view_negative .unread_positive,
+.NB-feedlist-hide-read-feeds .NB-feedlist.unread_view_negative .unread_neutral,
+.NB-feedlist-hide-read-feeds .NB-feedlist.unread_view_negative .unread_negative {
+  display: block;
+}
+
+.NB-feedlist-hide-read-feeds .NB-feedlist .feed.NB-empty {
   display: block;
 }
 
@@ -4253,7 +4253,7 @@ background: transparent;
   font-size: 12px;
   color: #606060;
   text-shadow: 1px 1px 0 #F0F0F0;
-  width: 685px;
+  width: 715px;
 }
 .NB-modal-feedchooser .NB-modal-subtitle b {
 /*  margin: 0 0 4px 0;*/
@@ -4267,7 +4267,7 @@ background: transparent;
 
 .NB-modal-feedchooser .NB-feedchooser-type {
   float: left;
-  width: 330px;
+  width: 345px;
   margin: 24px 24px 0 0;
   padding: 0 24px 0 0;
   border-right: 1px solid #E0E0E0;
@@ -4332,8 +4332,7 @@ background: transparent;
 }
 
 .NB-modal-feedchooser .NB-modal-submit.NB-modal-submit-paypal {
-    border-radius: 20px;
-    padding: 12px;
+    border-radius: 12px;
     border: 1px solid #F6BD44;
     padding: 0 8px 4px 0px;
     background-color: #FFED68;
@@ -4365,7 +4364,6 @@ background: transparent;
     margin: 0px 0px 0px 0;
     padding: 4px 0 4px 2px;
     font-weight: bold;
-    width: 112px;
 }
 
 .NB-modal-feedchooser .NB-feedchooser-dollar-value {
@@ -4431,6 +4429,9 @@ background: transparent;
     text-transform: uppercase;
 }
 
+.NB-modal-feedchooser #NB-feedchooser-feeds .feed {
+    display: block;
+}
 .NB-modal-feedchooser .feed.NB-feedchooser-approve .feed_title {
     font-weight: bold;
 }
